<resources>
    <!--system-->
    <string name="app_name">RemitEdu</string>

    <!--main-->
    <string name="mainGoalTitle">목표 : </string>
    <string name="mainTodayTitle">오늘 할 일</string>
    <string name="mainTodayTodo">오늘 할 일</string>
    <string name="mainDDay">D-day</string>
    <string name="mainTempNext">다음 단계</string>

    <!--tutorial-->
    <string name="tutorialTemp">사용설명</string>
    <string name="tutorialNext">넘아가기</string>

    <!--make_step1-->
    <string name="makeStep1Title">목표 달성 도우미</string>
    <string name="makeStep1Explain">토익, 자격증 등등.. 목표를 많이 새우지만 달성하기 너무 힘드시죠?\n목표만 입력하세요! 수만건의 데이터를 분석해서 계획을 새우고 달성까지 도와드립니다.</string>
    <string name="makeStep1GoalTitle">목표</string>
    <string name="makeStep1Next">다음 단계</string>

    <!--make_step2-->
    <string name="makeStep2Title">토익 실력 측정</string>
    <string name="makeStep2Explain">현재 토익 점수를 입력하세요.\n잘 모르시면 간단히 측정할 수 있는 예시 문제를 풀 수 있습니다.</string>
    <string name="makeStep2CurrentPosition">현재 점수</string>

</resources>